--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "substantial",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "octonode": "~0.5.0"
+    "octonode": "~0.5.0",
+    "minimist": "0.0.8",
+    "yargs": "~1.1.3",
+    "lodash": "~2.4.1"
   }
 }
