--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "repoman",
-  "version": "0.0.0",
+  "name": "rexport",
+  "version": "0.1.0",
+  "bin": {
+    "rexport": "./index.js"
+  },
   "description": "github repo audit tool",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "substantial",
   "license": "BSD-2-Clause",
   "dependencies": {
